src/test/deca/context/invalid/created/return/return_int_void.deca
// Description :
//    return mauvais type : void, demandé int
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
int met(){
}
}